force-app/main/default/objects/Manufacturing_Site__c/Manufacturing_Site__c.object-meta.xml
<CustomObject>
    <label>製造拠点</label>
    <pluralLabel>製造拠点</pluralLabel>
    <nameField>
        <label>拠点名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>