force-app/main/default/objects/Manufacturing_Site__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>住所</label>
    <type>Text</type>
    <length>255</length>
</CustomField>