force-app/main/default/objects/Manufacturing_Site__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>説明</label>
    <type>TextArea</type>
</CustomField>