force-app/main/default/objects/Manufacturing_Site__c/fields/Is_Own_Site__c.field-meta.xml
<CustomField>
    <fullName>Is_Own_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Own Site</label>
    <type>Checkbox</type>
</CustomField>