force-app/main/default/objects/Manufacturing_Site__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>緯度</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
</CustomField>