force-app/main/default/objects/Manufacturing_Site__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>経度</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
</CustomField>