force-app/main/default/objects/Manufacturing_Site__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>都道府県</label>
    <type>Text</type>
    <length>20</length>
</CustomField>