force-app/main/default/objects/Manufacturing_Site__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>サプライヤー</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>製造拠点</relationshipLabel>
    <relationshipName>Manufacturing_Sites</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>